classDiagram
    direction LR
    class User {
        <<Entity>>
        + UserId : string
        + FirstName : string?
        + LastName : string?
        + Email : string?
        + Phone : string?
        + AvatarUrl : string?
        + FlagCount : int?
        + IsDeleted : bool?
        + CreatedAt : DateTime?
        + UpdatedAt : DateTime?
    }

    class Account {
        <<Entity>>
        + AccountId : string
        + UserId : string?
        + Provider : string?
        + Username : string?
        + ProviderUserId : string?
        + PasswordHash : string?
        + MustChangePassword : bool?
        + IsPasswordSet : bool?
        + Status : string?
        + LastLoginAt : DateTime?
        + IsDeleted : bool?
        + CreatedAt : DateTime?
        + UpdatedAt : DateTime?
    }

    class Notification {
        <<Entity>>
        + NotificationId : string
        + UserId : string?
        + Title : string?
        + Message : string?
        + Type : string?
        + ReferenceId : string?
        + IsRead : bool?
        + ReadAt : DateTime?
        + CreatedAt : DateTime?
        + IsDeleted : bool?
    }

    Account "1..*" --> "1" User
    Notification "0..*" --> "1" User

    class NotificationHub {
        <<Hub>>
        - _notificationService : INotificationService
        + MarkAsRead(notificationId : string) : Task
    }

    class INotificationService {
        <<Interface>>
        + MarkAsReadAsync(accountId : string, notificationId : string) : Task~bool~
    }

    class NotificationService {
        <<Service>>
        - _notificationRepo : INotificationRepository
        - _accountRepo : IAccountRepository
        + MarkAsReadAsync(accountId : string, notificationId : string) : Task~bool~
    }

    class IAccountRepository {
        <<Interface>>
        + Query() : IQueryable~Account~
    }

    class AccountRepository {
        <<Repository>>
        - _context : AppDbContext
        + Query() : IQueryable~Account~
    }

    class INotificationRepository {
        <<Interface>>
        + Query() : IQueryable~Notification~
        + GetByIdAsync(id : object) : Task~Notification~
        + UpdateAsync(item : Notification) : Task
    }

    class NotificationRepository {
        <<Repository>>
        - _context : AppDbContext
        + Query() : IQueryable~Notification~
        + GetByIdAsync(id : object) : Task~Notification~
        + UpdateAsync(item : Notification) : Task
    }

    AccountRepository --> Account
    IAccountRepository <|.. AccountRepository
    NotificationRepository --> Notification
    INotificationRepository <|.. NotificationRepository
    NotificationService --> IAccountRepository
    NotificationService --> INotificationRepository
    INotificationService <|.. NotificationService
    NotificationHub --> INotificationService

    style User fill:#ffffff,stroke:#000000,color:#000000
    style Account fill:#ffffff,stroke:#000000,color:#000000
    style Notification fill:#ffffff,stroke:#000000,color:#000000
    style NotificationHub fill:#dae8fc,stroke:#6c8ebf,color:#000000
    style INotificationService fill:#ffffff,stroke:#000000,color:#000000
    style NotificationService fill:#ffffff,stroke:#000000,color:#000000
    style IAccountRepository fill:#ffffff,stroke:#000000,color:#000000
    style AccountRepository fill:#ffffff,stroke:#000000,color:#000000
    style INotificationRepository fill:#ffffff,stroke:#000000,color:#000000
    style NotificationRepository fill:#ffffff,stroke:#000000,color:#000000
